{
  "version": 4,
  "terraform_version": "1.2.0",
  "serial": 128,
  "lineage": "ee575748-5ae4-ff7f-1ab1-2b9e120cb215",
  "resources": [
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "linux_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/linux-rg/providers/Microsoft.Network/networkInterfaces/linux-vm-nic-1",
            "internal_domain_name_suffix": "lv4uxisl2guuxmwbip0go4dieb.cbrx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/linux-vm-pip-1",
                "subnet_id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1"
              }
            ],
            "location": "australiacentral",
            "name": "linux-vm-nic-1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "linux-rg",
            "tags": {
              "ContactEmail": "annrukshini@gmail.com",
              "Environment": "Lab",
              "Name": "Terraform Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.linux.azurerm_public_ip.public_ip",
            "module.network.azurerm_network_security_group.secgroup1",
            "module.network.azurerm_network_security_group.secgroup2",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation1",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.rgroupLinux",
            "module.resource_group.azurerm_resource_group.rgroupNetworking"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/linux-rg/providers/Microsoft.Network/networkInterfaces/linux-vm-nic-2",
            "internal_domain_name_suffix": "lv4uxisl2guuxmwbip0go4dieb.cbrx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-2",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/linux-vm-pip-2",
                "subnet_id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1"
              }
            ],
            "location": "australiacentral",
            "name": "linux-vm-nic-2",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "linux-rg",
            "tags": {
              "ContactEmail": "annrukshini@gmail.com",
              "Environment": "Lab",
              "Name": "Terraform Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.linux.azurerm_public_ip.public_ip",
            "module.network.azurerm_network_security_group.secgroup1",
            "module.network.azurerm_network_security_group.secgroup2",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation1",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.rgroupLinux",
            "module.resource_group.azurerm_resource_group.rgroupNetworking"
          ]
        }
      ]
    },
    {
      "module": "module.linux",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "linux-vm-dns-1",
            "fqdn": "linux-vm-dns-1.australiacentral.cloudapp.azure.com",
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/linux-vm-pip-1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "australiacentral",
            "name": "linux-vm-pip-1",
            "resource_group_name": "linux-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "annrukshini@gmail.com",
              "Environment": "Lab",
              "Name": "Terraform Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.secgroup1",
            "module.network.azurerm_network_security_group.secgroup2",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation1",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.rgroupLinux",
            "module.resource_group.azurerm_resource_group.rgroupNetworking"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "linux-vm-dns-2",
            "fqdn": "linux-vm-dns-2.australiacentral.cloudapp.azure.com",
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/linux-rg/providers/Microsoft.Network/publicIPAddresses/linux-vm-pip-2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "australiacentral",
            "name": "linux-vm-pip-2",
            "resource_group_name": "linux-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "annrukshini@gmail.com",
              "Environment": "Lab",
              "Name": "Terraform Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.secgroup1",
            "module.network.azurerm_network_security_group.secgroup2",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation1",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.rgroupLinux",
            "module.resource_group.azurerm_resource_group.rgroupNetworking"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "secgroup1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/secgroup1",
            "location": "australiacentral",
            "name": "secgroup1",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.rgroupNetworking"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "secgroup2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/secgroup2",
            "location": "australiacentral",
            "name": "secgroup2",
            "resource_group_name": "network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "3389",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rule2",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "5985",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rgroupNetworking"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1",
            "name": "subnet1",
            "resource_group_name": "network-rg",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rgroupNetworking"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet2",
            "name": "subnet2",
            "resource_group_name": "network-rg",
            "virtual_network_name": "vnet1"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rgroupNetworking"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sgassociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1",
            "network_security_group_id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/secgroup1",
            "subnet_id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet1"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.secgroup1",
            "module.network.azurerm_subnet.subnet1",
            "module.resource_group.azurerm_resource_group.rgroupNetworking"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sgassociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet2",
            "network_security_group_id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/networkSecurityGroups/secgroup2",
            "subnet_id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet2"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.secgroup2",
            "module.network.azurerm_subnet.subnet2",
            "module.resource_group.azurerm_resource_group.rgroupNetworking"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a24b7d5d-e14b-4ba9-b2c1-43f467786821",
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/vnet1",
            "location": "australiacentral",
            "name": "vnet1",
            "resource_group_name": "network-rg"
          },
          "dependencies": [
            "module.resource_group.azurerm_resource_group.rgroupNetworking"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windows_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "lab-web-w-vm1",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/windows-rg/providers/Microsoft.Network/networkInterfaces/lab-web-w-vm1-nic",
            "internal_domain_name_suffix": "lv4uxisl2guuxmwbip0go4dieb.cbrx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "lab-web-w-vm1-internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet2"
              }
            ],
            "location": "australiacentral",
            "name": "lab-web-w-vm1-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "windows-rg",
            "tags": {
              "ContactEmail": "annrukshini@gmail.com",
              "Environment": "Lab",
              "Name": "Terraform Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.secgroup1",
            "module.network.azurerm_network_security_group.secgroup2",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation1",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.rgroupNetworking",
            "module.resource_group.azurerm_resource_group.rgroupWindows"
          ]
        },
        {
          "index_key": "lab-web-w-vm2",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/windows-rg/providers/Microsoft.Network/networkInterfaces/lab-web-w-vm2-nic",
            "internal_domain_name_suffix": "lv4uxisl2guuxmwbip0go4dieb.cbrx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "lab-web-w-vm2-internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/network-rg/providers/Microsoft.Network/virtualNetworks/vnet1/subnets/subnet2"
              }
            ],
            "location": "australiacentral",
            "name": "lab-web-w-vm2-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "windows-rg",
            "tags": {
              "ContactEmail": "annrukshini@gmail.com",
              "Environment": "Lab",
              "Name": "Terraform Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.secgroup1",
            "module.network.azurerm_network_security_group.secgroup2",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation1",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.rgroupNetworking",
            "module.resource_group.azurerm_resource_group.rgroupWindows"
          ]
        }
      ]
    },
    {
      "module": "module.windows",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "lab-web-w-vm1",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "lab-web-w-vm1-dns",
            "fqdn": "lab-web-w-vm1-dns.australiacentral.cloudapp.azure.com",
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/windows-rg/providers/Microsoft.Network/publicIPAddresses/lab-web-w-vm1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "australiacentral",
            "name": "lab-web-w-vm1-pip",
            "resource_group_name": "windows-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "annrukshini@gmail.com",
              "Environment": "Lab",
              "Name": "Terraform Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.secgroup1",
            "module.network.azurerm_network_security_group.secgroup2",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation1",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.rgroupNetworking",
            "module.resource_group.azurerm_resource_group.rgroupWindows"
          ]
        },
        {
          "index_key": "lab-web-w-vm2",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "lab-web-w-vm2-dns",
            "fqdn": "lab-web-w-vm2-dns.australiacentral.cloudapp.azure.com",
            "id": "/subscriptions/b8af47be-e371-411e-99cf-60e960a5d5ab/resourceGroups/windows-rg/providers/Microsoft.Network/publicIPAddresses/lab-web-w-vm2-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "australiacentral",
            "name": "lab-web-w-vm2-pip",
            "resource_group_name": "windows-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "ContactEmail": "annrukshini@gmail.com",
              "Environment": "Lab",
              "Name": "Terraform Class",
              "Project": "Learning"
            }
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.secgroup1",
            "module.network.azurerm_network_security_group.secgroup2",
            "module.network.azurerm_subnet.subnet1",
            "module.network.azurerm_subnet.subnet2",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation1",
            "module.network.azurerm_subnet_network_security_group_association.sgassociation2",
            "module.network.azurerm_virtual_network.vnet",
            "module.resource_group.azurerm_resource_group.rgroupNetworking",
            "module.resource_group.azurerm_resource_group.rgroupWindows"
          ]
        }
      ]
    }
  ]
}